Fixed alignment with flashcard animation

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -46,6 +46,7 @@ p{
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
+
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
@@ -59,6 +60,7 @@ p{
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  padding: 70px 0;
 }
 
 /* Style the front side (fallback if image is missing) */
